--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -1,22 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Dashboard</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-</head>
+{% block content %}
 
-<body>
-    <h1>This is new template</h1>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
-</body>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12 col-md-4 d-flex justify-content-center text-center align-items-center" id="sideform">
+            <!-- Sideform -->
+            {% include 'components/sideform.html' %}
+        </div>
+        <div class="col-12 col-md-8 d-flex justify-content-center text-center align-items-center flex-nowrap">
+            <!-- Card -->
+            {% include 'components/card.html' %}
+        </div>
+    </div>
+</div>
 
-</html>
+{% endblock %}
