--- a/dashboard/static/styles.css
+++ b/dashboard/static/styles.css
@@ -1,5 +1,4 @@
 #sideform {
-  min-height: 96vh;
   background: linear-gradient(#f96c6c, #fff) !important;
 }
 
@@ -20,4 +19,10 @@ input {
   background-repeat: no-repeat;
   background-position: center;
   background-blend-mode: soft-light;
+}
+
+@media only screen and (min-width: 767px) {
+  #sideform {
+    min-height: 96vh;
+  }
 }
