--- a/dashboard/templates/components/card.html
+++ b/dashboard/templates/components/card.html
@@ -1,5 +1,5 @@
 {% if weather_data %}
-<div class="card my-4">
+<div class="card mx-auto my-4">
     <table class="table">
         <tbody>
             <tr>
